@@ -1,13 +1,13 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-EBUILD xfce4-settings-9999.ebuild 879 RMD160 db86ff761721dd9b505a0f846a5a95ffb1cee661 SHA1 8fae7c70711e1866d319c6155f05d6ab477050b7 SHA256 d734d8a9a4017fe630513eab3dbc43bf594f6a574c794d71694d1057f8f18458
-MISC ChangeLog 1068 RMD160 f441dac27b5c069f5b6cb9d4b35a9b1394b1edda SHA1 ff14401241e5ff99f67621159dcdafbcc2ee848b SHA256 d965cd2f77df075d8d50ad644fa75a943582caa2828807da476ce75cdc7f43ef
+EBUILD xfce4-settings-9999.ebuild 902 RMD160 ae68159fa7fe840dbd2429adad639df1ca19745f SHA1 b9ba89e86823e582f8f6c4782f226c1b64ed8414 SHA256 ba5c0967dee3b4be6a9efac9f988f86ae47987a6219c8da6e9b18d3818fc99c6
+MISC ChangeLog 1170 RMD160 80f82b3594d151af252781ebe1045920954134cd SHA1 51408c8462fa6c88da87212179bafeba5e2050f8 SHA256 3e9bb5d66503c913b0a9bfaaa16077be735dc83c2855325b84722fed3c1e6338
 MISC metadata.xml 157 RMD160 d7470fe88d1b96f3a7f1ef26fb7dc646b4a1b907 SHA1 7eae91f2588bdae8667d37a98fb3090d539eeca1 SHA256 44350daa7594842894d676413708d8ea77ccb0017bed24711af5b256281f5e61
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkkWJFIACgkQKhnDs22gwa+6iQCg+B8ymgxfsuHdIqCzwjXrI7qf
-uakAn1/cIPjT9zsbjX5DiKChUxLKcErL
-=Rjbw
+iEYEARECAAYFAkkXXbYACgkQKhnDs22gwa++eACcCDqhBBQYkyMDImGU2gPwvzaj
+bl0AoPcUyVhLiG3Ty4PxL2JAgvAemxW3
+=raPv
 -----END PGP SIGNATURE-----
