@@ -2,6 +2,10 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  09 Nov 2008; Christoph Mende <angelos@gentoo.org>
+  xfce4-settings-9999.ebuild:
+  Fix dependencies
+
   29 Oct 2008; Christoph Mende <angelos@gentoo.org>
   xfce4-settings-9999.ebuild:
   Added a blocker against old MCS
